# lambda-calculus

./: .gitignore  README.md
hoas/: main.hs
sltc/: main.hs
untyped/: README.md  flake.nix  main.hs  untyped.cabal
untyped/src/: Main.hs
untyped/src/Lambda/: Interp.hs  Syntax.hs
