cabal-version:      2.4
name:               untyped
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Miguel Nascimento
maintainer:         miguelgomes13@live.com

executable lc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Lambda.Syntax , Lambda.Interp

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0 , containers
    hs-source-dirs:   src
    default-language: Haskell2010
